auto publishing updates to notebooks

--- a/back_prop.ipynb
+++ b/back_prop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b5640b13",
+   "id": "6b1eaea0",
    "metadata": {},
    "source": [
     "# Introduction to Artificial Neural Networks"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfdda97b",
+   "id": "95da7c07",
    "metadata": {
     "hide-output": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a83bb001",
+   "id": "e2a5447b",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6f3f59",
+   "id": "716e0e06",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc9efd14",
+   "id": "9779f0d1",
    "metadata": {},
    "source": [
     "## A Deep (but not Wide) Artificial Neural Network\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42930c2e",
+   "id": "9e0ef464",
    "metadata": {},
    "source": [
     "## Calibrating  Parameters\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42be6604",
+   "id": "7d3bed0c",
    "metadata": {},
    "source": [
     "## Back Propagation and the Chain Rule\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "859e7b51",
+   "id": "d2d828da",
    "metadata": {},
    "source": [
     "## Training Set\n",
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "574319f8",
+   "id": "775bf8f5",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0288c6",
+   "id": "4881da9e",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61f83724",
+   "id": "97e25ee7",
    "metadata": {
     "hide-output": false
    },
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a7a84c",
+   "id": "01cbe8bf",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9364918c",
+   "id": "e965a4db",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "565919c6",
+   "id": "e66d2fbf",
    "metadata": {
     "hide-output": false
    },
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b43f35b",
+   "id": "dfd804ab",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fd29507",
+   "id": "5f47f671",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96eaf917",
+   "id": "cd1c8dae",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bf43dad",
+   "id": "adbc2bb1",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19116f8a",
+   "id": "49af77b2",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5efe6ab",
+   "id": "6b0b1625",
    "metadata": {
     "hide-output": false
    },
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ecd1ab7",
+   "id": "53339308",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dac56899",
+   "id": "b0182d81",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de5c1b9e",
+   "id": "b5a0490e",
    "metadata": {},
    "source": [
     "## Example 1\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8ac64a",
+   "id": "f741fcbf",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af70440f",
+   "id": "d01a48b9",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6feb7fd9",
+   "id": "170d10cd",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8dcac8",
+   "id": "3f15617e",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7986190",
+   "id": "578e4084",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c86e93b6",
+   "id": "56c8aa40",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34dc987b",
+   "id": "2ca9464c",
    "metadata": {},
    "source": [
     "## How Deep?\n",
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf94eed2",
+   "id": "8b43dbeb",
    "metadata": {},
    "source": [
     "## Example 2\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb669ba",
+   "id": "b968984d",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34624e57",
+   "id": "f51d46d6",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49a1efa1",
+   "id": "462712dc",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3144f749",
+   "id": "4fb66a5a",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab8458a9",
+   "id": "fff54754",
    "metadata": {
     "hide-output": false
    },
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8e79be",
+   "id": "eb446fd7",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f82baa3",
+   "id": "aefa8b98",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61723792",
+   "id": "67885d5d",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b2d451",
+   "id": "a38763da",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65b46490",
+   "id": "1957df40",
    "metadata": {
     "hide-output": false
    },
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0bd4cd1",
+   "id": "79b40074",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -891,7 +891,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589239.7783241,
+  "date": 1706658080.097546,
   "filename": "back_prop.md",
   "kernelspec": {
    "display_name": "Python",
