--- a/exchangeable.ipynb
+++ b/exchangeable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "132222de",
+   "id": "d54a9758",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f6f6fe9",
+   "id": "300adbcf",
    "metadata": {},
    "source": [
     "# Exchangeability and Bayesian Updating"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75482a2b",
+   "id": "48f4e16e",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "667d6ac4",
+   "id": "6773cec0",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,14 +51,14 @@
     "The relevance of DeFinetti’s work for economists is presented forcefully\n",
     "in chapter 11 of [[Kre88](https://stats.quantecon.org/zreferences.html#id97)] by David Kreps.\n",
     "\n",
-    "An example  that we study in this lecture  is a key component of [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html) that augments the\n",
-    "[classic](https://quantecon.github.io/lecture-dynamics/mccall_model.html)  job search model of McCall\n",
+    "An example  that we study in this lecture  is a key component of [this lecture](https://dynamics.quantecon.org/odu.html) that augments the\n",
+    "[classic](https://dynamics.quantecon.org/mccall_model.html)  job search model of McCall\n",
     "[[McC70](https://stats.quantecon.org/zreferences.html#id181)] by presenting an unemployed worker with a statistical inference problem.\n",
     "\n",
     "Here we create  graphs that illustrate the role that  a  likelihood ratio\n",
     "plays in  Bayes’ Law.\n",
     "\n",
-    "We’ll use such graphs to provide insights into  mechanics driving outcomes in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html) about learning in an augmented McCall job\n",
+    "We’ll use such graphs to provide insights into  mechanics driving outcomes in [this lecture](https://dynamics.quantecon.org/odu.html) about learning in an augmented McCall job\n",
     "search model.\n",
     "\n",
     "Among other things, this lecture discusses  connections between the statistical concepts of sequences of random variables that are\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a487c4f5",
+   "id": "6fbca507",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74bd3f20",
+   "id": "43ee5f24",
    "metadata": {},
    "source": [
     "## Independently and Identically Distributed\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b704e73",
+   "id": "362f857e",
    "metadata": {},
    "source": [
     "### IID Means Past Observations Don’t Tell Us Anything About Future Observations\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c1c7c96",
+   "id": "2f871f26",
    "metadata": {},
    "source": [
     "## A Setting in Which Past Observations Are Informative\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4334e5",
+   "id": "7e651738",
    "metadata": {},
    "source": [
     "## Relationship Between IID and Exchangeable\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb2d6ea",
+   "id": "9b795d93",
    "metadata": {},
    "source": [
     "## Exchangeability\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3d4d24",
+   "id": "290ef81e",
    "metadata": {},
    "source": [
     "## Bayes’ Law\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "739723f5",
+   "id": "177eedcb",
    "metadata": {},
    "source": [
     "## More Details about Bayesian Updating\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b564f6f4",
+   "id": "5aa5a4c5",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c735570",
+   "id": "0a0f4bf4",
    "metadata": {},
    "source": [
     "Now we’ll create a group of graphs that illustrate  dynamics induced by Bayes’ Law.\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ee04c90",
+   "id": "e366c558",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca37b885",
+   "id": "05b77217",
    "metadata": {},
    "source": [
     "Please look at the three graphs above created for an instance in which $ f $ is a uniform distribution on $ [0,1] $\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2d0613",
+   "id": "ec32a31d",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1520f7a",
+   "id": "bc774865",
    "metadata": {},
    "source": [
     "Notice how the likelihood ratio, the middle graph, and the arrows compare with the previous instance of our example."
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c486c5b6",
+   "id": "f68dffcc",
    "metadata": {},
    "source": [
     "## Appendix"
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acb6bad2",
+   "id": "0a2b0138",
    "metadata": {},
    "source": [
     "### Sample Paths of $ \\pi_t $\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb29bb7a",
+   "id": "64522772",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e50e60",
+   "id": "e4665bdd",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "986489ed",
+   "id": "fb3c0485",
    "metadata": {},
    "source": [
     "We begin by generating $ N $ simulated $ \\{\\pi_t\\} $ paths with $ T $\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3bf5321",
+   "id": "8ee5ebed",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05054d93",
+   "id": "c64fbe73",
    "metadata": {
     "hide-output": false
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fb6962c",
+   "id": "2cfe2afc",
    "metadata": {},
    "source": [
     "In the above example,  for most paths $ \\pi_t \\rightarrow 1 $.\n",
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93bfa78d",
+   "id": "d5c947ef",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9439df",
+   "id": "f5dd591f",
    "metadata": {},
    "source": [
     "In the above graph we observe that now  most paths $ \\pi_t \\rightarrow 0 $."
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed7f4c63",
+   "id": "22af24b8",
    "metadata": {},
    "source": [
     "### Rates of convergence\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddbd0bf9",
+   "id": "1f13507f",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "923d9316",
+   "id": "643d6339",
    "metadata": {},
    "source": [
     "From the above graph, rates of convergence appear not to depend on whether $ F $ or $ G $ generates the data."
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b4713f0",
+   "id": "c835fc35",
    "metadata": {},
    "source": [
     "### Graph of Ensemble Dynamics of $ \\pi_t $\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54f4d4a",
+   "id": "76c50091",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e7fa8e",
+   "id": "251ec2e6",
    "metadata": {},
    "source": [
     "First, consider the case where $ F_a=F_b=1 $ and\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad1ba7e",
+   "id": "4b948666",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f17f3cf0",
+   "id": "e200eea6",
    "metadata": {},
    "source": [
     "The above graphs shows that when $ F $ generates the data, $ \\pi_t $ on average always heads north, while\n",
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47b4fef5",
+   "id": "6cb5f04d",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac33c095",
+   "id": "e371568f",
    "metadata": {},
    "source": [
     "The above graph says that $ \\pi_t $ is inert and  remains at its initial value.\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e209559",
+   "id": "db1d9701",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a149d58",
+   "id": "c0f628fe",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1007,7 +1007,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589240.0437174,
+  "date": 1706658080.371617,
   "filename": "exchangeable.md",
   "kernelspec": {
    "display_name": "Python",
