--- a/imp_sample.ipynb
+++ b/imp_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40b74e45",
+   "id": "6313f364",
    "metadata": {},
    "source": [
     "# Computing Mean of a Likelihood Ratio Process"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1521ee0",
+   "id": "b2e2c2b8",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afb6213e",
+   "id": "663e9e9a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d67ab9b9",
+   "id": "1d796536",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b85c0e",
+   "id": "bb8baae4",
    "metadata": {},
    "source": [
     "## Mathematical Expectation of Likelihood Ratio\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a805d0d2",
+   "id": "ef1337ab",
    "metadata": {
     "hide-output": false
    },
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71ce24ae",
+   "id": "16f6fded",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7142d972",
+   "id": "918d097a",
    "metadata": {},
    "source": [
     "The likelihood ratio is `l(w)=f(w)/g(w)`."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b08855e",
+   "id": "f6a6800f",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee7e97f",
+   "id": "a6cbe246",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4db86fc6",
+   "id": "db58edce",
    "metadata": {},
    "source": [
     "The above plots shows that as $ \\omega \\rightarrow 0 $, $ f \\left(\\omega\\right) $ is unchanged and $ g \\left(\\omega\\right) \\rightarrow 0 $, so  the likelihood ratio approaches infinity.\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1482f6f6",
+   "id": "4a193f25",
    "metadata": {},
    "source": [
     "## Importance sampling\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b51a0c",
+   "id": "1d871623",
    "metadata": {},
    "source": [
     "## Selecting a Sampling Distribution\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff2f8b5b",
+   "id": "8c57ebc2",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b68b8958",
+   "id": "cf4e79cd",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ed6914",
+   "id": "98ab3e64",
    "metadata": {},
    "source": [
     "## Approximating a cumulative likelihood ratio\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "573366f1",
+   "id": "ff1a9b0f",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ea2ff1",
+   "id": "f7dacca6",
    "metadata": {},
    "source": [
     "Consider the case when $ T=1 $, which amounts  to approximating $ E_0\\left[\\ell\\left(\\omega\\right)\\right] $\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d563bab",
+   "id": "d6c6b03e",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "254751d2",
+   "id": "7fbac6a1",
    "metadata": {},
    "source": [
     "For our importance sampling estimate, we set $ q = h $."
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edb1a37",
+   "id": "8d25e836",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8ef004",
+   "id": "8d01bc9e",
    "metadata": {},
    "source": [
     "Evidently, even at T=1, our importance sampling  estimate is closer to $ 1 $ than is the Monte Carlo estimate.\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cff3b4",
+   "id": "adee8130",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5b21243",
+   "id": "518e50d2",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "737ffca0",
+   "id": "8f54ffb5",
    "metadata": {},
    "source": [
     "## Distribution of  Sample Mean\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6253b35",
+   "id": "3408b550",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bbdf64",
+   "id": "40beeda2",
    "metadata": {},
    "source": [
     "Again, we first consider estimating $ {E} \\left[\\ell\\left(\\omega\\right)\\right] $ by setting T=1.\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f5157f4",
+   "id": "aeb76f77",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "282ff908",
+   "id": "f106b927",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "960bd3c9",
+   "id": "9eee69b6",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bfb835e",
+   "id": "bdcc3f5b",
    "metadata": {},
    "source": [
     "Although both methods tend to provide a mean estimate of $ {E} \\left[\\ell\\left(\\omega\\right)\\right] $ close to $ 1 $, the importance sampling estimates have  smaller variance.\n",
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eaaa1ad",
+   "id": "ed67abf5",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5219c5a3",
+   "id": "9d4478e1",
    "metadata": {},
    "source": [
     "The simulation exercises above show that the importance sampling estimates are unbiased under all $ T $\n",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b77fa5",
+   "id": "74e945db",
    "metadata": {},
    "source": [
     "## More Thoughts about Choice of Sampling Distribution\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43f00adf",
+   "id": "e07a1cc8",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc68e6f",
+   "id": "2a98a769",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4309a17",
+   "id": "2c09df55",
    "metadata": {},
    "source": [
     "We could also use other distributions as our importance distribution.\n",
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cd87c18",
+   "id": "cf3d887f",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c042dc4a",
+   "id": "7e6f31fd",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753bbc7e",
+   "id": "36da8b8f",
    "metadata": {},
    "source": [
     "We consider two additonal distributions.\n",
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98bbda8d",
+   "id": "71a5b0c4",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a92c40",
+   "id": "beaf1b49",
    "metadata": {},
    "source": [
     "Our simulations suggest that indeed $ h_2 $ is a quite  good importance sampling distribution for our problem.\n",
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e6589e",
+   "id": "3f72bea8",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c33c6ef",
+   "id": "37db81f6",
    "metadata": {},
    "source": [
     "However, $ h_3 $ is evidently a poor importance sampling distribution forpir problem,\n",
@@ -771,7 +771,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589240.1350102,
+  "date": 1706658080.460989,
   "filename": "imp_sample.md",
   "kernelspec": {
    "display_name": "Python",
