--- a/likelihood_bayes.ipynb
+++ b/likelihood_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "85d1c4d3",
+   "id": "7f69c7e5",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7d166fd",
+   "id": "15e27973",
    "metadata": {},
    "source": [
     "# Likelihood Ratio Processes and Bayesian Learning"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d28cb09d",
+   "id": "0ce8dc66",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -41,7 +41,7 @@
     "\n",
     "We’ll also drill down into the psychology of our Bayesian learner and study dynamics  under his subjective beliefs.\n",
     "\n",
-    "This lecture provides technical results that underly outcomes to be studied in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html)\n",
+    "This lecture provides technical results that underly outcomes to be studied in [this lecture](https://dynamics.quantecon.org/odu.html)\n",
     "and [this lecture](https://stats.quantecon.org/wald_friedman.html) and [this lecture](https://stats.quantecon.org/navy_captain.html).\n",
     "\n",
     "We’ll begin by loading some Python modules."
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ef2f839",
+   "id": "aa9bd314",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e9e4b98",
+   "id": "85cc7da3",
    "metadata": {},
    "source": [
     "## The Setting\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f37b330",
+   "id": "bb361665",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74593b7c",
+   "id": "aa5e77fa",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdf9a609",
+   "id": "019570cc",
    "metadata": {},
    "source": [
     "We’ll also use the following Python code to prepare some informative simulations"
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4121bafb",
+   "id": "0baa2179",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "685ace59",
+   "id": "f9ad1fad",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9b50b82",
+   "id": "8e9a1577",
    "metadata": {},
    "source": [
     "## Likelihood Ratio Process and Bayes’ Law\n",
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd4f023",
+   "id": "59ef6a70",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5d88bf0",
+   "id": "673f6ff9",
    "metadata": {},
    "source": [
     "Formula [(15.1)](#equation-eq-recur1) can be generalized  by iterating on it and thereby deriving an\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a214b5",
+   "id": "0ead4709",
    "metadata": {
     "hide-output": false
    },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "523c45bc",
+   "id": "267dba34",
    "metadata": {},
    "source": [
     "Next we generate paths of the likelihood ratio process $ L_t $ and the posterior $ \\pi_t $ for a\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15a3401",
+   "id": "6076dd21",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "159c75dd",
+   "id": "9e1c597f",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb9cda5",
+   "id": "029f7289",
    "metadata": {},
    "source": [
     "The dotted line in the graph above records the logarithm of the  likelihood ratio process $ \\log L(w^t) $.\n",
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "376a7833",
+   "id": "bf12ce06",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a03a32d7",
+   "id": "8f7ecffd",
    "metadata": {
     "hide-output": false
    },
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb9f6de",
+   "id": "5376ebe3",
    "metadata": {},
    "source": [
     "Below we offer Python code that verifies that nature chose permanently to draw from density $ f $."
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca30116",
+   "id": "c8fa7195",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f638b72d",
+   "id": "14402dc6",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169e810f",
+   "id": "3190b924",
    "metadata": {},
    "source": [
     "We thus conclude that  the likelihood ratio process is a key ingredient of the formula [(15.2)](#equation-eq-bayeslaw103) for\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8a1593b",
+   "id": "7819e017",
    "metadata": {},
    "source": [
     "## Behavior of  posterior probability $ \\{\\pi_t\\} $  under the subjective probability distribution\n",
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc37a93",
+   "id": "253b01d8",
    "metadata": {},
    "source": [
     "### Mechanical details again\n",
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69160106",
+   "id": "6409b7b0",
    "metadata": {},
    "source": [
     "### Some simulations\n",
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb67e738",
+   "id": "4f166733",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed567ad",
+   "id": "b6377195",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe42ea00",
+   "id": "7f12f203",
    "metadata": {},
    "source": [
     "The above graph indicates that\n",
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868b492c",
+   "id": "9ef1191a",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4429da70",
+   "id": "41c843fe",
    "metadata": {},
    "source": [
     "Evidently, by $ t = 199 $, $ \\pi_t $ has converged to either $ 0 $ or $ 1 $.\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34f67fd0",
+   "id": "8828eb8c",
    "metadata": {
     "hide-output": false
    },
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75bbb143",
+   "id": "f926ea65",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28551dea",
+   "id": "a6e2279c",
    "metadata": {},
    "source": [
     "For the preceding ensemble that assumed $ \\pi_0 = .5 $, the following graph shows two  paths of\n",
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfaa806b",
+   "id": "ecfe1316",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "349c17cf",
+   "id": "603656f5",
    "metadata": {},
    "source": [
     "## Initial Prior is Verified by Paths Drawn from Subjective Conditional Densities\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a25388af",
+   "id": "0fcf012a",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5271843",
+   "id": "2e887fc2",
    "metadata": {},
    "source": [
     "The fraction of simulations for which $ \\pi_{t} $  had converged to $ 1 $ is indeed always  close  to $ \\pi_{-1} $, as anticipated."
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d48b1f66",
+   "id": "87dc21bb",
    "metadata": {},
    "source": [
     "## Drilling Down a Little Bit\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aa6d8e7",
+   "id": "f112e4fc",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6552bf",
+   "id": "89a2fa93",
    "metadata": {},
    "source": [
     "The shape of the the conditional variance as a function of $ \\pi_{t-1} $ is informative about the behavior of sample paths of $ \\{\\pi_t\\} $.\n",
@@ -1052,18 +1052,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faab12bf",
+   "id": "adb8f49e",
    "metadata": {},
    "source": [
     "## Sequels\n",
     "\n",
     "This lecture has been devoted to building some useful infrastructure that will help us understand inferences that are the foundations of\n",
-    "results described  in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html) and [this lecture](https://stats.quantecon.org/wald_friedman.html) and [this lecture](https://stats.quantecon.org/navy_captain.html)."
+    "results described  in [this lecture](https://dynamics.quantecon.org/odu.html) and [this lecture](https://stats.quantecon.org/wald_friedman.html) and [this lecture](https://stats.quantecon.org/navy_captain.html)."
    ]
   }
  ],
  "metadata": {
-  "date": 1706589240.2077951,
+  "date": 1706658080.5336945,
   "filename": "likelihood_bayes.md",
   "kernelspec": {
    "display_name": "Python",
