--- a/likelihood_ratio_process.ipynb
+++ b/likelihood_ratio_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91015ef1",
+   "id": "7afa1edd",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed70ece6",
+   "id": "5ffd7733",
    "metadata": {},
    "source": [
     "# Likelihood Ratio Processes"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f445f8",
+   "id": "4c985540",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04a4ab2e",
+   "id": "d0d577e5",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "260fb7e5",
+   "id": "01cf7a00",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4df69748",
+   "id": "74afe178",
    "metadata": {},
    "source": [
     "## Likelihood Ratio Process\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b272a2a",
+   "id": "03cc2a21",
    "metadata": {
     "hide-output": false
    },
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f043d145",
+   "id": "b14c770d",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e546832d",
+   "id": "660e28c5",
    "metadata": {},
    "source": [
     "## Nature Permanently Draws from Density g\n",
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89655e0f",
+   "id": "71739d37",
    "metadata": {
     "hide-output": false
    },
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b40eada",
+   "id": "c011aef1",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "699a353c",
+   "id": "4dd55f13",
    "metadata": {},
    "source": [
     "Evidently, as sample length $ T $ grows, most probability mass\n",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "592d5e71",
+   "id": "f3f61c37",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50777263",
+   "id": "b5f50cdc",
    "metadata": {},
    "source": [
     "Despite the evident convergence of most probability mass to a\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c17e16b5",
+   "id": "106a72df",
    "metadata": {},
    "source": [
     "## Peculiar Property\n",
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fd49288",
+   "id": "099102a7",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08d1332d",
+   "id": "340388e6",
    "metadata": {},
    "source": [
     "It would be useful to use simulations to verify that  unconditional means\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcbe9032",
+   "id": "8cd459a6",
    "metadata": {},
    "source": [
     "## Nature Permanently Draws from Density f\n",
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fdf7feb",
+   "id": "f26c365d",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf55cf27",
+   "id": "323ec681",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152fb825",
+   "id": "e77a4848",
    "metadata": {},
    "source": [
     "We also plot the probability that $ L\\left(w^t\\right) $ falls into\n",
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5da58a8b",
+   "id": "93fd9ffc",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9695fbb5",
+   "id": "0bac5b8e",
    "metadata": {},
    "source": [
     "## Likelihood Ratio Test\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e56dea7c",
+   "id": "1b8121d9",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507fcc54",
+   "id": "3e1a6e5b",
    "metadata": {},
    "source": [
     "Below we plot empirical distributions of logarithms of the cumulative\n",
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48804eef",
+   "id": "c58e5958",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81e2739",
+   "id": "64cf4e38",
    "metadata": {},
    "source": [
     "The graph below shows more clearly that, when we hold the threshold\n",
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c06856",
+   "id": "e57e32ec",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3658c47",
+   "id": "fd062d69",
    "metadata": {},
    "source": [
     "For a given sample size $ t $,  the threshold $ c $ uniquely pins down  probabilities\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863dc549",
+   "id": "e20d552a",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6e21be",
+   "id": "66518b5c",
    "metadata": {},
    "source": [
     "Notice that as $ t $ increases, we are assured a larger probability\n",
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f46f45",
+   "id": "d201bd53",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4002675",
+   "id": "3524eedc",
    "metadata": {},
    "source": [
     "The United States Navy evidently used a procedure like this to select a sample size $ t $ for doing quality\n",
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad11d1c7",
+   "id": "590d167e",
    "metadata": {},
    "source": [
     "## Kullback–Leibler Divergence\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1460a60",
+   "id": "572e0298",
    "metadata": {
     "hide-output": false
    },
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "599a31d4",
+   "id": "aad85233",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f4841b0",
+   "id": "906ec718",
    "metadata": {},
    "source": [
     "Let’s compute the Kullback–Leibler discrepancies by quadrature\n",
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1b2af4",
+   "id": "72d0494e",
    "metadata": {
     "hide-output": false
    },
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69760077",
+   "id": "1ca23618",
    "metadata": {
     "hide-output": false
    },
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83eab70d",
+   "id": "32982011",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "310fb2bb",
+   "id": "2de039c2",
    "metadata": {},
    "source": [
     "We have $ K_g < K_f $.\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3ff2c75",
+   "id": "30a102a2",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48ef1e0a",
+   "id": "8d8f1557",
    "metadata": {},
    "source": [
     "The figure below plots over time the fraction of paths\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac64bf8a",
+   "id": "e2d29c12",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76eb3b1b",
+   "id": "2429476c",
    "metadata": {},
    "source": [
     "We can also try an $ h $ that is closer to $ f $ than is\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78193444",
+   "id": "3453b4b4",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0cf8bef",
+   "id": "447c826c",
    "metadata": {
     "hide-output": false
    },
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6944ca16",
+   "id": "82b5c149",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ab98bc",
+   "id": "160c04e2",
    "metadata": {},
    "source": [
     "Now probability mass of $ L\\left(w^t\\right) $ falling above\n",
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5f096ce",
+   "id": "f1fa9c50",
    "metadata": {
     "hide-output": false
    },
@@ -1031,13 +1031,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84a523fd",
+   "id": "7fa0eda9",
    "metadata": {},
    "source": [
     "## Sequels\n",
     "\n",
     "Likelihood processes play an important role in Bayesian learning, as described in [this lecture](https://stats.quantecon.org/likelihood_bayes.html)\n",
-    "and as applied in [this lecture](https://quantecon.github.io/lecture-dynamics/odu.html).\n",
+    "and as applied in [this lecture](https://dynamics.quantecon.org/odu.html).\n",
     "\n",
     "Likelihood ratio processes appear again in [this lecture](https://python-advanced.quantecon.org/additive_functionals.html), which contains another illustration\n",
     "of the **peculiar property** of likelihood ratio processes described above."
@@ -1045,7 +1045,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589240.2623506,
+  "date": 1706658080.5877788,
   "filename": "likelihood_ratio_process.md",
   "kernelspec": {
    "display_name": "Python",
