--- a/mix_model.ipynb
+++ b/mix_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed07b2f5",
+   "id": "d2d376ba",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83bdccdf",
+   "id": "8550e390",
    "metadata": {},
    "source": [
     "# Incorrect Models\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f21d3757",
+   "id": "04a61f8a",
    "metadata": {
     "hide-output": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b93b2a",
+   "id": "e3656c36",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "410ee1cd",
+   "id": "fdb13619",
    "metadata": {
     "hide-output": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "203696e8",
+   "id": "56b4e256",
    "metadata": {},
    "source": [
     "Let’s use Python to generate two beta distributions"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aafa87cd",
+   "id": "22d36607",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac4ab199",
+   "id": "fd9df6b6",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a5a6c0",
+   "id": "829718a4",
    "metadata": {},
    "source": [
     "We’ll also use the following Python code to prepare some informative simulations"
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2437fe3",
+   "id": "8056aea4",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f908e582",
+   "id": "02ad4d13",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd1b6c6",
+   "id": "2c095dbe",
    "metadata": {},
    "source": [
     "## Sampling from  Compound Lottery $ H $\n",
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ab14f8",
+   "id": "af9ab5d7",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ea65faa",
+   "id": "36b57f87",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb20b2c9",
+   "id": "d809a59f",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "880f392d",
+   "id": "dd32f94b",
    "metadata": {
     "hide-output": false
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86c921f1",
+   "id": "510bdcd2",
    "metadata": {},
    "source": [
     "**Note:** With numba acceleration the first method is actually only slightly slower than the second when we generated 1,000,000 samples."
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a80a3bce",
+   "id": "83443c34",
    "metadata": {},
    "source": [
     "## Type 1 Agent\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da20936",
+   "id": "a1008abf",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2222b445",
+   "id": "e89cac0d",
    "metadata": {},
    "source": [
     "Formula [(16.1)](#equation-equation-eq-recur1) can be generalized  by iterating on it and thereby deriving an\n",
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8461e920",
+   "id": "0d32e896",
    "metadata": {},
    "source": [
     "## What a type 1 Agent Learns when Mixture $ H $ Generates Data\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a05042a",
+   "id": "43b4e916",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "325844e8",
+   "id": "9f21b035",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01034b74",
+   "id": "853ee521",
    "metadata": {},
    "source": [
     "The above graph shows a sample path of the log likelihood ratio process as the blue dotted line, together with\n",
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d094ba0",
+   "id": "d24d4491",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f29f78da",
+   "id": "74353d8c",
    "metadata": {},
    "source": [
     "Evidently, $ \\alpha $ is having a big effect on the destination of $ \\pi_t $ as $ t \\rightarrow + \\infty $"
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9591887",
+   "id": "825c5b98",
    "metadata": {},
    "source": [
     "## Kullback-Leibler Divergence Governs Limit of $ \\pi_t $\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90d6c4c",
+   "id": "8e79b753",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8e75350",
+   "id": "f986e970",
    "metadata": {},
    "source": [
     "Let us first plot the KL divergences $ KL_g\\left(\\alpha\\right), KL_f\\left(\\alpha\\right) $ for each $ \\alpha $."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8679629f",
+   "id": "0dd255e1",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b19a8d23",
+   "id": "dda1b832",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb575284",
+   "id": "569a908a",
    "metadata": {},
    "source": [
     "Let’s compute an $ \\alpha $ for which  the KL divergence  between $ h $ and $ g $ is the same as that between $ h $ and $ f $."
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea37c427",
+   "id": "67202c80",
    "metadata": {
     "hide-output": false
    },
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a43785fd",
+   "id": "cf95ad97",
    "metadata": {},
    "source": [
     "We can compute and plot the convergence point $ \\pi_{\\infty} $ for each $ \\alpha $ to verify that the convergence is indeed governed by the KL divergence.\n",
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c10b4061",
+   "id": "93fbe719",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adde7429",
+   "id": "75c7feab",
    "metadata": {},
    "source": [
     "Evidently, our type 1 learner who applies Bayes’ law to his misspecified set of statistical models eventually learns an approximating model that is as close as possible to the true model, as measured by its\n",
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682d22ed",
+   "id": "c62256f0",
    "metadata": {},
    "source": [
     "## Type 2 Agent\n",
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a6e169b",
+   "id": "65522401",
    "metadata": {
     "hide-output": false
    },
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed014e8e",
+   "id": "597aa826",
    "metadata": {},
    "source": [
     "The following code generates the graph below that displays Bayesian posteriors for $ \\alpha $ at various history lengths."
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22737af7",
+   "id": "edd5450e",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa25402",
+   "id": "6dc9cb85",
    "metadata": {},
    "source": [
     "Evidently,  the Bayesian posterior  narrows in on the true value  $ \\alpha = .8 $ of the mixing parameter as the length of a history of observations grows."
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3e8253c",
+   "id": "7bd22e7c",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
@@ -1028,7 +1028,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589240.4917257,
+  "date": 1706658080.81316,
   "filename": "mix_model.md",
   "kernelspec": {
    "display_name": "Python",
