--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c210d235",
+   "id": "c6fa7608",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "454d5655",
+   "id": "13512677",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7868826",
+   "id": "55a03bb3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b449959",
+   "id": "afe9df76",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e2467ff",
+   "id": "14972d11",
    "metadata": {},
    "source": [
     "### Prerequisites\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "671fdd4a",
+   "id": "e5bc1250",
    "metadata": {},
    "source": [
     "## Set Up and Assumptions\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6af1966",
+   "id": "d3a73814",
    "metadata": {},
    "source": [
     "### Flow of Ideas\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea081abc",
+   "id": "b4ed7aec",
    "metadata": {},
    "source": [
     "### Counting Billionaires\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9be6a13d",
+   "id": "c213b2f2",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "075bccf9",
+   "id": "5c2fcdb0",
    "metadata": {},
    "source": [
     "Notice that the Poisson distribution begins to resemble a normal distribution as the mean of $ y $ increases.\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "915a40d9",
+   "id": "cbca5be5",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c043be26",
+   "id": "6d362b3e",
    "metadata": {},
    "source": [
     "Using a histogram, we can view the distribution of the number of\n",
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a05434f",
+   "id": "4ccccc01",
    "metadata": {
     "hide-output": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d27542a",
+   "id": "d542d146",
    "metadata": {},
    "source": [
     "From the histogram, it appears that the Poisson assumption is not unreasonable (albeit with a very low $ \\mu $ and some outliers)."
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84f49cc",
+   "id": "973cc8c9",
    "metadata": {},
    "source": [
     "## Conditional Distributions\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ad889f",
+   "id": "ac9a472d",
    "metadata": {
     "hide-output": false
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "125d36b9",
+   "id": "1f4ceea8",
    "metadata": {},
    "source": [
     "We can see that the distribution of $ y_i $ is conditional on\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e2e497",
+   "id": "a87dee64",
    "metadata": {},
    "source": [
     "## Maximum Likelihood Estimation\n",
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8318fa31",
+   "id": "1847cc6b",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b38c7e58",
+   "id": "01c4c61f",
    "metadata": {},
    "source": [
     "Similarly, the joint pmf of our data (which is distributed as a\n",
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7f86896",
+   "id": "99373ea5",
    "metadata": {},
    "source": [
     "## MLE with Numerical Methods\n",
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98628cd",
+   "id": "8bc8daa3",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ce4608",
+   "id": "980f04c7",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8af02cb7",
+   "id": "119c8667",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b742f5c7",
+   "id": "2675d010",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `PoissonRegression` object\n",
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "463360ac",
+   "id": "33ffedbf",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "428f58b5",
+   "id": "e2478e48",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0976e4eb",
+   "id": "2c83eb66",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1054163d",
+   "id": "3d6861bb",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3685c83",
+   "id": "da1cdce6",
    "metadata": {
     "hide-output": false
    },
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fa1a7a",
+   "id": "cd916726",
    "metadata": {},
    "source": [
     "The iterative process can be visualized in the following diagram, where\n",
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d1f468",
+   "id": "aed0ba39",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25495cf9",
+   "id": "716851b9",
    "metadata": {},
    "source": [
     "Note that our implementation of the Newton-Raphson algorithm is rather\n",
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c7158d1",
+   "id": "876b5a0f",
    "metadata": {},
    "source": [
     "## Maximum Likelihood Estimation with `statsmodels`\n",
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4989b4",
+   "id": "4ebc3bf8",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9538c2cd",
+   "id": "d747f5b0",
    "metadata": {},
    "source": [
     "Now let’s replicate results from Daniel Treisman’s paper, [Russia’s\n",
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e72826f",
+   "id": "83736651",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "336aefe7",
+   "id": "8e83b1d4",
    "metadata": {},
    "source": [
     "Then we can use the `Poisson` function from `statsmodels` to fit the\n",
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6e77d72",
+   "id": "78565446",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f05c5a03",
+   "id": "d797388b",
    "metadata": {},
    "source": [
     "Success! The algorithm was able to achieve convergence in 9 iterations.\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cbfab00",
+   "id": "c0bd17ec",
    "metadata": {
     "hide-output": false
    },
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4fa5d0",
+   "id": "d1e23144",
    "metadata": {},
    "source": [
     "The output suggests that the frequency of billionaires is positively\n",
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4ea517d",
+   "id": "28ff6126",
    "metadata": {
     "hide-output": false
    },
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b040b0b8",
+   "id": "0f0072e4",
    "metadata": {},
    "source": [
     "As we can see, Russia has by far the highest number of billionaires in\n",
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb83de99",
+   "id": "d03a314c",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56ec3437",
+   "id": "23c9eb51",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be930f57",
+   "id": "37117cb7",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5593c67",
+   "id": "1876405e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://stats.quantecon.org/#mle_ex1)\n",
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5652068b",
+   "id": "728f6246",
    "metadata": {
     "hide-output": false
    },
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c231324",
+   "id": "8c5a6b20",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9cc807d",
+   "id": "4da44176",
    "metadata": {
     "hide-output": false
    },
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ec7246",
+   "id": "f795ed4e",
    "metadata": {},
    "source": [
     "Note that the simple Newton-Raphson algorithm developed in this lecture\n",
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7295c753",
+   "id": "5b596948",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://stats.quantecon.org/#mle_ex2)\n",
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94cccb70",
+   "id": "2adf6572",
    "metadata": {
     "hide-output": false
    },
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f8af28a",
+   "id": "fd09b12f",
    "metadata": {
     "hide-output": false
    },
@@ -1319,7 +1319,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589240.54168,
+  "date": 1706658080.8632236,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
