--- a/ols.ipynb
+++ b/ols.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10e524c7",
+   "id": "5823f624",
    "metadata": {},
    "source": [
     "# Linear Regression in Python"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "767d0760",
+   "id": "7140b34c",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f23bc6",
+   "id": "ba459ace",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa63f3e7",
+   "id": "8dafa314",
    "metadata": {
     "hide-output": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d03b9cca",
+   "id": "c8da96b7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "097450d3",
+   "id": "c4bdcf9c",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b332149d",
+   "id": "139182be",
    "metadata": {},
    "source": [
     "### Prerequisites\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ce8f13",
+   "id": "dae43d79",
    "metadata": {},
    "source": [
     "## Simple Linear Regression\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a058ef24",
+   "id": "86d3a8ee",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52d6f8d",
+   "id": "43e846b1",
    "metadata": {},
    "source": [
     "Let’s use a scatterplot to see whether any obvious relationship exists\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "617bdc49",
+   "id": "ee79a1de",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2797214",
+   "id": "b53ac4b7",
    "metadata": {},
    "source": [
     "The plot shows a fairly strong positive relationship between\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89fa5741",
+   "id": "c22d1885",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c70e97b",
+   "id": "e699fb8d",
    "metadata": {},
    "source": [
     "The most common technique to estimate the parameters ($ \\beta $’s)\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c01f2301",
+   "id": "d91d4c15",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9445d576",
+   "id": "e71fb37a",
    "metadata": {},
    "source": [
     "Now we can construct our model in `statsmodels` using the OLS function.\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dacba896",
+   "id": "df3bbb2c",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "064be159",
+   "id": "f401b8ca",
    "metadata": {},
    "source": [
     "So far we have simply constructed our model.\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78dc0fd7",
+   "id": "a5d5986d",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b357835e",
+   "id": "9865113f",
    "metadata": {},
    "source": [
     "We now have the fitted regression model stored in `results`.\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5203e0e",
+   "id": "0e850a42",
    "metadata": {
     "hide-output": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e7bdd6",
+   "id": "31fd97ac",
    "metadata": {},
    "source": [
     "From our results, we see that\n",
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b86952e0",
+   "id": "8ebfc2ea",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f27cea57",
+   "id": "5fb20cc4",
    "metadata": {
     "hide-output": false
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb0af5e",
+   "id": "2158801c",
    "metadata": {},
    "source": [
     "An easier (and more accurate) way to obtain this result is to use\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dd803d9",
+   "id": "8bba00af",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a9412e3",
+   "id": "b68cadfa",
    "metadata": {},
    "source": [
     "We can obtain an array of predicted $ {logpgp95}_i $ for every value\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbe4c4c1",
+   "id": "c9e7980f",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ccb30c9",
+   "id": "5421dd10",
    "metadata": {},
    "source": [
     "## Extending the Linear Regression Model\n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16bd484f",
+   "id": "e052f540",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2431ab32",
+   "id": "65e63e74",
    "metadata": {},
    "source": [
     "Now that we have fitted our model, we will use `summary_col` to\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9644b68d",
+   "id": "148b591b",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad23c03c",
+   "id": "c5f508c4",
    "metadata": {},
    "source": [
     "## Endogeneity\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dcbd954",
+   "id": "47d2f3b5",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b693cc",
+   "id": "0387eae3",
    "metadata": {},
    "source": [
     "The second condition may not be satisfied if settler mortality rates in the 17th to 19th centuries have a direct effect on current GDP (in addition to their indirect effect through institutions).\n",
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af425d40",
+   "id": "cf04e327",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b1ee13",
+   "id": "29669cff",
    "metadata": {},
    "source": [
     "**Second stage**\n",
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27372537",
+   "id": "d17beaa4",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "901a4297",
+   "id": "1d38f22d",
    "metadata": {},
    "source": [
     "The second-stage regression results give us an unbiased and consistent\n",
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c07bcd",
+   "id": "0c4c7da8",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e2fa71",
+   "id": "75b16ca6",
    "metadata": {},
    "source": [
     "Given that we now have consistent and unbiased estimates, we can infer\n",
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c33f6ebc",
+   "id": "58cb8faa",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b55dba",
+   "id": "b811862f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cf0c843",
+   "id": "22dc5dfa",
    "metadata": {},
    "source": [
     "## Exercise 2.1\n",
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdcb65ca",
+   "id": "335de197",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 2.1](https://stats.quantecon.org/#ols_ex1)"
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0db0201",
+   "id": "bb1e24f1",
    "metadata": {
     "hide-output": false
    },
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "394726ac",
+   "id": "297ed7ff",
    "metadata": {},
    "source": [
     "The output shows that the coefficient on the residuals is statistically\n",
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb1fcbe",
+   "id": "9ae808b0",
    "metadata": {},
    "source": [
     "## Exercise 2.2\n",
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1898f0ae",
+   "id": "87b45207",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 2.2](https://stats.quantecon.org/#ols_ex2)"
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42ca23b5",
+   "id": "5d3351a7",
    "metadata": {
     "hide-output": false
    },
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcc9f7e",
+   "id": "1f96cabf",
    "metadata": {},
    "source": [
     "It is also possible to use `np.linalg.inv(X.T @ X) @ X.T @ y` to solve\n",
@@ -1033,7 +1033,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589240.8504934,
+  "date": 1706658081.295134,
   "filename": "ols.md",
   "kernelspec": {
    "display_name": "Python",
