--- a/ar1_turningpts.ipynb
+++ b/ar1_turningpts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ea7e9b2",
+   "id": "91063c6f",
    "metadata": {},
    "source": [
     "# Forecasting  an AR(1) Process"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4cce7c9",
+   "id": "0b36eaaa",
    "metadata": {
     "hide-output": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e31a80f8",
+   "id": "78d6d972",
    "metadata": {},
    "source": [
     "This lecture describes methods for forecasting statistics that are functions of future values of a univariate autogressive process.\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd618537",
+   "id": "1fdd46c4",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e869d1",
+   "id": "88c2a839",
    "metadata": {},
    "source": [
     "## A Univariate First-Order Autoregressive Process\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84574036",
+   "id": "2d9e3abf",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73328f5b",
+   "id": "76e62025",
    "metadata": {
     "hide-output": false
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f673a7",
+   "id": "cbe912c1",
    "metadata": {},
    "source": [
     "As functions of forecast horizon, the coverage intervals have shapes like those described in\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b2a1c51",
+   "id": "39d079d5",
    "metadata": {},
    "source": [
     "## Predictive Distributions of Path Properties\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9480663",
+   "id": "6b0f6056",
    "metadata": {},
    "source": [
     "## A Wecker-Like Algorithm\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65ddada",
+   "id": "99c8ce08",
    "metadata": {},
    "source": [
     "## Using Simulations to Approximate a Posterior Distribution\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "493231de",
+   "id": "9fcc1a9e",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbab282",
+   "id": "765fdadb",
    "metadata": {},
    "source": [
     "The graphs on the left portray posterior marginal distributions."
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cea8163",
+   "id": "b35ebaa7",
    "metadata": {},
    "source": [
     "## Calculating Sample Path Statistics\n",
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8023fa94",
+   "id": "d9a47753",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed95487",
+   "id": "8aa4de05",
    "metadata": {},
    "source": [
     "## Original Wecker Method\n",
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ac11d74",
+   "id": "d1cb89e2",
    "metadata": {
     "hide-output": false
    },
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92549e38",
+   "id": "1db2f91b",
    "metadata": {},
    "source": [
     "## Extended Wecker Method\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3fbe928",
+   "id": "08b2a682",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8737b905",
+   "id": "7d6dc742",
    "metadata": {},
    "source": [
     "## Comparison\n",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b5b58a9",
+   "id": "8861023b",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589239.734375,
+  "date": 1706658080.0526476,
   "filename": "ar1_turningpts.md",
   "kernelspec": {
    "display_name": "Python",
