--- a/navy_captain.ipynb
+++ b/navy_captain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cf56b37c",
+   "id": "d185bf68",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4554636c",
+   "id": "0403e645",
    "metadata": {},
    "source": [
     "# Bayesian versus Frequentist Decision Rules"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0c88b49",
+   "id": "046f1719",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "781dad83",
+   "id": "9211e090",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80200294",
+   "id": "44d88820",
    "metadata": {
     "hide-output": false
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2642f115",
+   "id": "2d84d803",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b146fc",
+   "id": "7913b08a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb51a905",
+   "id": "4def5d2d",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39b1e498",
+   "id": "e280138c",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a67425ab",
+   "id": "4f117452",
    "metadata": {},
    "source": [
     "We start with defining a `jitclass` that stores parameters and\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793caac3",
+   "id": "0bbb0f97",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80515380",
+   "id": "24d586db",
    "metadata": {
     "hide-output": false
    },
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20134776",
+   "id": "1109a151",
    "metadata": {
     "hide-output": false
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1240def2",
+   "id": "f3d849bf",
    "metadata": {},
    "source": [
     "Above, we plot the two possible probability densities $ f_0 $ and\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95eb3db3",
+   "id": "5976f267",
    "metadata": {},
    "source": [
     "## Frequentist Decision Rule\n",
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd7b1d2",
+   "id": "97cd21d8",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c8b4dc",
+   "id": "0eebbf84",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee42bf3f",
+   "id": "bc108e1e",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "242447ce",
+   "id": "c8813026",
    "metadata": {},
    "source": [
     "We can compute sequences of likelihood ratios using simulated samples."
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d273d7df",
+   "id": "832de09a",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709e034c",
+   "id": "c9da8a64",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4d85cc3",
+   "id": "45947a59",
    "metadata": {},
    "source": [
     "With an empirical distribution of likelihood ratios in hand, we can draw\n",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7955aa3",
+   "id": "070a96fb",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5148a4e7",
+   "id": "871d6aaf",
    "metadata": {},
    "source": [
     "Our frequentist minimizes the expected total loss presented in equation\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee320a6a",
+   "id": "ef1a8973",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a362349",
+   "id": "6404eae0",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca62fb7",
+   "id": "d4376c51",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce69686",
+   "id": "6bf0481f",
    "metadata": {
     "hide-output": false
    },
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22c0520c",
+   "id": "efc78c4a",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6564f4",
+   "id": "8e1bcf50",
    "metadata": {
     "hide-output": false
    },
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cc2359e",
+   "id": "9e7d7e10",
    "metadata": {},
    "source": [
     "Let’s now change the value of $ \\pi^{*} $ and watch how the decision\n",
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eeb1945",
+   "id": "5326ed69",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8403f89a",
+   "id": "eaa050a7",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82aee9af",
+   "id": "2cb53b85",
    "metadata": {},
    "source": [
     "The following shows how optimal sample size $ t $ and targeted\n",
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc68018",
+   "id": "c3fc91ec",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b024c34",
+   "id": "642e5380",
    "metadata": {},
    "source": [
     "## Bayesian Decision Rule\n",
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "046e803f",
+   "id": "010a3103",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea63e39e",
+   "id": "ec6746b8",
    "metadata": {
     "hide-output": false
    },
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4bdd861",
+   "id": "98108ac5",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75379ad3",
+   "id": "76d56b6e",
    "metadata": {
     "hide-output": false
    },
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10452555",
+   "id": "e909db09",
    "metadata": {},
    "source": [
     "The above figure portrays the value function plotted against the decision\n",
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d4dd40a",
+   "id": "158aa71d",
    "metadata": {
     "hide-output": false
    },
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "009c7616",
+   "id": "ff0a54ab",
    "metadata": {
     "hide-output": false
    },
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1baef82",
+   "id": "c930e629",
    "metadata": {},
    "source": [
     "Given an assumed value for\n",
@@ -1033,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a706a2",
+   "id": "1b291c0b",
    "metadata": {
     "hide-output": false
    },
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d23d53",
+   "id": "35c597e8",
    "metadata": {
     "hide-output": false
    },
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a40ae2a",
+   "id": "99552627",
    "metadata": {},
    "source": [
     "This pattern of outcomes holds more generally.\n",
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d617237",
+   "id": "3f7d4b7a",
    "metadata": {
     "hide-output": false
    },
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "795ab15b",
+   "id": "735dbef3",
    "metadata": {},
    "source": [
     "## Was the Navy Captain’s Hunch Correct?\n",
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f361260e",
+   "id": "fc5049f5",
    "metadata": {
     "hide-output": false
    },
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41aa0a67",
+   "id": "e23039fc",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "720fb43a",
+   "id": "8cd510bf",
    "metadata": {
     "hide-output": false
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "597ec3ec",
+   "id": "be744bc7",
    "metadata": {},
    "source": [
     "Evidently, there is no sample size $ t $ at which the frequentist\n",
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a8e764",
+   "id": "640ffea7",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f1f5be",
+   "id": "a20619a4",
    "metadata": {},
    "source": [
     "The right panel of the above graph plots the difference\n",
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd3f6d6",
+   "id": "5ca76e6c",
    "metadata": {},
    "source": [
     "## More Details\n",
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e44c200f",
+   "id": "1fc89643",
    "metadata": {
     "hide-output": false
    },
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c784ec76",
+   "id": "eba9c268",
    "metadata": {},
    "source": [
     "Recall that when $ \\pi^*=0.5 $, the frequentist decision rule sets a\n",
@@ -1273,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09e079f9",
+   "id": "841f7c6f",
    "metadata": {
     "hide-output": false
    },
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e263686",
+   "id": "0a0b7ef0",
    "metadata": {},
    "source": [
     "For convenience, let’s define `t_idx` as the Python array index\n",
@@ -1294,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14cfcb5d",
+   "id": "335c173e",
    "metadata": {
     "hide-output": false
    },
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d6074ce",
+   "id": "c392ac13",
    "metadata": {},
    "source": [
     "## Distribution of Bayesian Decision Rule’s Time to Decide\n",
@@ -1330,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00fe33d2",
+   "id": "537d96f5",
    "metadata": {
     "hide-output": false
    },
@@ -1359,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ba9094",
+   "id": "be0d6149",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea3d7bd9",
+   "id": "5eb11d94",
    "metadata": {
     "hide-output": false
    },
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c04e347",
+   "id": "ac459045",
    "metadata": {},
    "source": [
     "Later we’ll figure out how these distributions ultimately affect\n",
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de1e1652",
+   "id": "c8562be7",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d483dde",
+   "id": "3edde5b7",
    "metadata": {
     "hide-output": false
    },
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48066a30",
+   "id": "244e946b",
    "metadata": {},
    "source": [
     "The above figures compare averages and variances of updated Bayesian\n",
@@ -1485,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2056967",
+   "id": "f72cae23",
    "metadata": {
     "hide-output": false
    },
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbaf3795",
+   "id": "327864bc",
    "metadata": {},
    "source": [
     "## Probability of Making Correct Decision\n",
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5d8285d",
+   "id": "8b125a6e",
    "metadata": {
     "hide-output": false
    },
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee26c316",
+   "id": "e4d51895",
    "metadata": {
     "hide-output": false
    },
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df3cfb4",
+   "id": "c2e68f6c",
    "metadata": {},
    "source": [
     "By averaging using $ \\pi^{*} $, we also plot the unconditional\n",
@@ -1577,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a70eca5",
+   "id": "a173749e",
    "metadata": {
     "hide-output": false
    },
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "704e4ead",
+   "id": "a7e9d5fd",
    "metadata": {},
    "source": [
     "## Distribution of Likelihood Ratios at Frequentist’s $ t $\n",
@@ -1623,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a797d5",
+   "id": "1c30d6a6",
    "metadata": {
     "hide-output": false
    },
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "558af30b",
+   "id": "810ea39b",
    "metadata": {
     "hide-output": false
    },
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67bd5838",
+   "id": "1cc9b6be",
    "metadata": {},
    "source": [
     "The next graph plots the unconditional distribution of Bayesian times to\n",
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c694f330",
+   "id": "8aaa753c",
    "metadata": {
     "hide-output": false
    },
@@ -1693,7 +1693,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589240.794153,
+  "date": 1706658081.1159785,
   "filename": "navy_captain.md",
   "kernelspec": {
    "display_name": "Python",
