--- a/wald_friedman.ipynb
+++ b/wald_friedman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f81588d9",
+   "id": "58e62cd0",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88cfd3b5",
+   "id": "075cae57",
    "metadata": {},
    "source": [
     "# A Problem that Stumped Milton Friedman\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83a603e8",
+   "id": "45db8895",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8616c7e6",
+   "id": "92da4bcd",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861c6982",
+   "id": "005a7a58",
    "metadata": {
     "hide-output": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afba66c7",
+   "id": "13496205",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97dae41f",
+   "id": "f6b91e7f",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da78b353",
+   "id": "a293fabb",
    "metadata": {},
    "source": [
     "This lecture uses ideas studied in [this lecture](https://stats.quantecon.org/likelihood_ratio_process.html), [this lecture](https://stats.quantecon.org/likelihood_bayes.html).\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab29e9a",
+   "id": "20ea9253",
    "metadata": {},
    "source": [
     "## Origin of the Problem\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc998aed",
+   "id": "1dcbaae5",
    "metadata": {},
    "source": [
     "## A Dynamic Programming Approach\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d74b7c",
+   "id": "05eba375",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8791612b",
+   "id": "dd5d7512",
    "metadata": {},
    "source": [
     "### Losses and Costs\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68f4ea8c",
+   "id": "eef9fe4f",
    "metadata": {},
    "source": [
     "### Digression on Type I and Type II Errors\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34480fd4",
+   "id": "debe8b4c",
    "metadata": {},
    "source": [
     "### Intuition\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8cba151",
+   "id": "e22252bc",
    "metadata": {},
    "source": [
     "### A Bellman Equation\n",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bae143",
+   "id": "74fe95f0",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e80000",
+   "id": "480bf1a5",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09897a4",
+   "id": "18ddf7d9",
    "metadata": {
     "hide-output": false
    },
@@ -583,10 +583,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb006533",
+   "id": "873ba4d2",
    "metadata": {},
    "source": [
-    "As in the [optimal growth lecture](https://quantecon.github.io/lecture-dynamics/optgrowth.html), to approximate a continuous value function\n",
+    "As in the [optimal growth lecture](https://dynamics.quantecon.org/optgrowth.html), to approximate a continuous value function\n",
     "\n",
     "- We iterate at a finite grid of possible values of $ \\pi $.  \n",
     "- When we evaluate $ \\mathbb E[J(\\pi')] $ between grid points, we use linear interpolation.  \n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b66c3c",
+   "id": "f3524796",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b98cf391",
+   "id": "d224c9ba",
    "metadata": {},
    "source": [
     "To solve the key functional equation, we will iterate using `Q` to find the fixed point"
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ed0cd9",
+   "id": "44ae5868",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "197f0cbb",
+   "id": "1c4e3370",
    "metadata": {},
    "source": [
     "## Analysis\n",
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85f491fb",
+   "id": "0ac787b2",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d4ff347",
+   "id": "5f5bd8d7",
    "metadata": {},
    "source": [
     "### Value Function\n",
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "805b23b0",
+   "id": "0ab8ed9f",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6905c56",
+   "id": "cd155ede",
    "metadata": {},
    "source": [
     "We will also set up a function to compute the cutoffs $ \\alpha $ and $ \\beta $\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c4f5a4",
+   "id": "51dd8552",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12068bb9",
+   "id": "c4819978",
    "metadata": {},
    "source": [
     "The cost function $ J $ equals $ \\pi L_1 $ for $ \\pi \\leq \\beta $, and $ (1-\\pi )L_0 $ for $ \\pi\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447b6292",
+   "id": "9efac33a",
    "metadata": {},
    "source": [
     "### Simulations\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7616ff",
+   "id": "589ead16",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a003250d",
+   "id": "1cbdb24f",
    "metadata": {},
    "source": [
     "### Comparative Statics\n",
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bea70fa",
+   "id": "18876cc8",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18afc116",
+   "id": "14332cd4",
    "metadata": {},
    "source": [
     "Increased cost per draw has induced the decision-maker to take fewer draws before deciding.\n",
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3936513",
+   "id": "2eebdc47",
    "metadata": {},
    "source": [
     "### A Notebook Implementation\n",
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "413749fd",
+   "id": "bf92eb13",
    "metadata": {},
    "source": [
     "## Comparison with Neyman-Pearson Formulation\n",
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73db4ab4",
+   "id": "6f79d317",
    "metadata": {},
    "source": [
     "## Sequels\n",
@@ -1203,7 +1203,7 @@
   }
  ],
  "metadata": {
-  "date": 1706589241.4608507,
+  "date": 1706658081.800995,
   "filename": "wald_friedman.md",
   "kernelspec": {
    "display_name": "Python",
